data partially  displayed into card

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -2,4 +2,5 @@
 @forward '_footer.scss';
 @forward '_button.scss';
 @forward '_main.scss';
+@forward '_eventCard.scss';
 // @forward '_calendar.scss';
