--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -3,4 +3,6 @@
 @forward '_button.scss';
 @forward '_main.scss';
 @forward '_eventCard.scss';
+@forward '_list.scss';
+@forward '_boxes.scss';
 // @forward '_calendar.scss';
