--- a/src/scss/layouts/_events.scss
+++ b/src/scss/layouts/_events.scss
@@ -101,17 +101,73 @@
     }
   }
 }
-.events__crash {
-  text-align: center;
-  margin: 5vh 0;
+
+.events {
+  &__crash {
+    text-align: center;
+    margin: 5vh 0;
+  }
+  &__nodb {
+    img {
+      display: block;
+      margin: 3vh auto 0;
+      border-radius: 50%;
+      height: 50vh;
+      aspect-ratio: 1/1;
+    }
+  }
+  &__loading {
+    text-align: center;
+    animation: loading 1.5s infinite;
+    margin: 10vh auto;
+    color: $primaryColor;
+    font-size: 3rem;
+  }
+  &__error {
+    overflow: hidden;
+    border-right: 0.15em solid hsl(0, 0%, 50%);
+    white-space: nowrap;
+    padding: 0;
+    /*     max-width: fit-content; */
+    letter-spacing: 0.15em;
+    animation: typing 3.5s steps(40, end), blink-caret 1.5s step-end infinite;
+  }
+  &__error-container {
+    width: fit-content;
+    margin: 10vh auto;
+  }
+}
+/* loading effect */
+
+@keyframes loading {
+  0% {
+    opacity: 0.1;
+  }
+  66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.1;
+  }
 }
 
-.events__nodb{
-  img {
-    display: block;
-    margin: 3vh auto 0;
-    border-radius: 50%;
-    height: 50vh;
-    aspect-ratio: 1/1;
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #5a5a5a;
   }
 }
