--- a/src/scss/layouts/_landingPage.scss
+++ b/src/scss/layouts/_landingPage.scss
@@ -1,6 +1,6 @@
 @use '../components/list.scss' as *;
+@use '../components/boxes.scss' as *;
 
-$gradientPercent: 35%;
 
 menu {
   display: flex;
@@ -15,10 +15,6 @@ menu {
   }
 }
 .landing-page {
-  h1 {
-    padding: 2em 0;
-  }
-
   &__hero {
     background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bXVzaWN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
     background-size: cover;
