--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -2,7 +2,10 @@ $test-color: white;
 $white: hsl(0, 0%, 90%);
 $lightGrey: hsl(0, 0%, 95%);
 $grey: hsl(0, 0%, 50%);
-$primaryColor: #eba400;
+$primaryColor: hsl(42, 100%, 46%);
+$primaryColorLight: hsl(42, 100%, 75%);
+$primaryColorTransparent: hsla(42, 100%, 66%, 0.5);
 $secondaryColor: #ba17eb;
+$secondaryColorLight: hsl(286, 84%, 75%);
 $tertiaryColor: #17eb98;
-$primaryColorLight: hsl(0, 0%, 100%);
+/* $primaryColorLight: hsl(0, 0%, 100%); */
