--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,19 +1,27 @@
 @use '../utilities/utilities' as *;
+@use '../utilities/colors' as *;
 
 footer {
   @extend .test;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   padding: 2vh 5vw;
   position: fixed;
   inset: auto 0 0 0;
-}
 
-.footer {
-  &__by {
+  menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .footer__contact {
+    display: flex;
+    justify-content: space-between;
     & a {
-      padding: 0;
+      padding: .5em;
+      margin: .5em;
+      color: $primaryColor;
     }
   }
 }
