corrected style to mobile view

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -5,4 +5,5 @@
 @forward '_eventCard.scss';
 @forward '_list.scss';
 @forward '_boxes.scss';
+@forward '_burger.scss';
 // @forward '_calendar.scss';
