--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -5,22 +5,30 @@ footer {
   @extend .test;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   padding: 2vh 5vw;
-  position: fixed;
-  inset: auto 0 0 0;
+  position: sticky;
+  bottom: -20vh;
 
   menu {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: start;
+    margin: 0;
+    gap: 0;
+    a {
+      margin: 0;
+      padding: 0;
+    }
   }
   .footer__contact {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: end;
     & a {
-      padding: .5em;
-      margin: .5em;
+      padding: 0;
+      margin: 0;
       color: $primaryColor;
     }
   }
