--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -3,7 +3,6 @@
 .about {
   h2 {
     text-align: center;
-    margin: 1.5rem 0 3rem;
     color: $grey;
   }
 
@@ -11,5 +10,21 @@
     text-align: center;
     font-style: italic;
     font-size: 2rem;
+  }
+  li {
+    margin: 1em 0;
+    /* &::before {
+      content: '•';
+      color: $primaryColor;
+      font-weight: bold;
+      display: inline-block;
+      width: 1em;
+      margin-left: -1em;
+    } */
+  }
+
+  &__bullet {
+    color: $primaryColor;
+    margin-right: 0.5em;
   }
 }
