--- a/src/scss/layouts/_events.scss
+++ b/src/scss/layouts/_events.scss
@@ -67,13 +67,18 @@
   &__filter {
     display: flex;
     justify-content: center;
-    margin: 5vh 0;
+    margin: 2.5vh auto;
     @media screen and (max-width: 768px) {
       flex-direction: column;
     }
-    & input {
+    /* & input {
       margin: 0 1vh;
-    }
+    } */
+  }
+
+  &__filter-container {
+    margin: 0 auto;
+    width: fit-content;
   }
   &__main {
     display: flex;
@@ -116,23 +121,29 @@
     margin: 10vh auto;
     color: $primaryColor;
     font-size: 3rem;
+    line-break: normal;
   }
   &__error {
     overflow: hidden;
     border-right: 0.15em solid hsl(0, 0%, 50%);
-    white-space: nowrap;
     padding: 0;
     /*     max-width: fit-content; */
     letter-spacing: 0.15em;
     animation: typing 3.5s steps(40, end), blink-caret 1.5s step-end infinite;
+    line-break: normal;
   }
   &__error-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: fit-content;
     margin: 0 auto;
     gap: 5vh;
+    img {
+      height: 30vh;
+      width: 90vh;
+      margin: 2vh 0;
+      object-fit: cover;
+    }
   }
 }
 /* loading effect */
