--- a/src/scss/layouts/_landingPage.scss
+++ b/src/scss/layouts/_landingPage.scss
@@ -1,7 +1,6 @@
 @use '../components/list.scss' as *;
 @use '../components/boxes.scss' as *;
 
-
 menu {
   display: flex;
   margin: 4vh 0;
@@ -15,6 +14,9 @@ menu {
   }
 }
 .landing-page {
+  h1 {
+    font-size: 3.2rem;
+  }
   &__hero {
     background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bXVzaWN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
     background-size: cover;
