--- a/src/scss/layouts/_projects.scss
+++ b/src/scss/layouts/_projects.scss
@@ -32,6 +32,7 @@ $folderColor: orange;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2vh;
     gap: 2vh;
     img {
       width: 80%;
