--- a/src/scss/utilities/_typography.scss
+++ b/src/scss/utilities/_typography.scss
@@ -10,10 +10,11 @@ $logoFont: 'Special Elite', sans-serif;
 h1 {
   font-family: $primaryFont;
   font-family: $logoFont;
-  font-size: 3.2rem;
+  font-size: 3rem;
   font-weight: 700;
   color: $primaryColor;
   text-align: center;
+  padding: 0.5em 0;
   //  margin: 1em 0 1.5em;
 }
 
@@ -22,8 +23,8 @@ h2 {
   font-size: 2rem;
   font-weight: 700;
   color: $primaryColor;
-  margin-bottom: 1em;
-  padding: 2em 0;
+  margin: 0.5em 0;
+  padding: 0;
 }
 
 h3 {
@@ -36,8 +37,6 @@ h3 {
 p,
 a,
 li,
-label,
-input,
 textarea,
 mark,
 button {
@@ -48,9 +47,22 @@ button {
   line-height: 1.7em;
 }
 
-mark, .mark {
+
+mark,
+.mark {
   font-weight: 700;
   background: none;
+}
+
+label,
+input {
+  font-family: $primaryFont;
+  font-size: 1.8rem;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+  color: $grey;
+  line-height: 1.7em;
 }
 
 a {
