--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
 @use './utilities/_utilities.scss';
 @use './components/_components.scss';
 @use './layouts/_layouts.scss';
+@use './views/_views.scss';
