--- a/src/scss/layouts/_layouts.scss
+++ b/src/scss/layouts/_layouts.scss
@@ -1,8 +1,4 @@
-@forward "./_about.scss";
-@forward "./_contact.scss";
-@forward "./_events.scss";
-@forward "./_impressum.scss";
-@forward "./_landingPage.scss";
-@forward "./projects.scss";
-@forward "./collaborate.scss";
-@forward "./not-found.scss";
+@forward '_header.scss';
+@forward '_footer.scss';
+@forward '_main.scss';
+@forward '_section.scss';
