--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -64,7 +64,7 @@ header {
       grid-area: nav;
       background-color: $primaryColor;
       a {
-        color: white;
+        color: $white;
       }
     }
   }
