--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -1,6 +1,4 @@
 @forward '_reset.scss';
+@forward '_root.scss';
 @forward '_colors.scss';
 @forward '_typography.scss';
-@forward "_root.scss";
-@forward "_global-parameters.scss";
-@forward "_layout-utilities.scss";
