--- a/src/scss/views/_collaborate.scss
+++ b/src/scss/views/_collaborate.scss
@@ -1,7 +1,7 @@
 @use '../components/list.scss' as *;
 @use '../utilities/colors.scss' as *;
 @use '../components/list.scss' as *;
-@use '../components/boxes.scss' as *;
+@use '../utilities/boxes.scss' as *;
 
 .collaborate {
   li {
