--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -1,3 +1,4 @@
+@use '../utilities/colors.scss' as *;
 .calendar {
   display: none;
   @media screen and (min-width: 500px) {
@@ -11,7 +12,7 @@
     &__day {
       height: 50px;
       aspect-ratio: 1/1;
-      outline: 1px solid orange;
+      outline: $primaryColor;
       padding: 0;
       padding: 5px;
       overflow: hidden;
