--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,12 +1,12 @@
 @use '../utilities/utilities' as *;
 @use '../utilities/colors' as *;
+@use "../utilities/boxes" as *;
 
 footer {
-  @extend .test;
   display: flex;
   justify-content: space-between;
   align-items: start;
-  padding: 2vh 5vw;
+  padding: $boxPadding;
   position: sticky;
   bottom: -20vh;
 
