--- a/src/scss/views/_projects.scss
+++ b/src/scss/views/_projects.scss
@@ -1,4 +1,4 @@
-@use '../components/boxes.scss' as *;
+@use '../utilities/boxes.scss' as *;
 @use '../utilities/colors.scss' as *;
 
 $folderColor: orange;
