--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -8,13 +8,11 @@ header {
     'nav nav';
   padding: 2vh 5vw;
   background-color: $white;
-
-  /* a {
-    margin: 0 1vw;
-    background-color: purple;
-    padding: 0;
-    font-weight: 400;
-  } */
+  padding: 2vh 4vw;
+  @media screen and (min-width: 769px) {
+    grid-template-columns: 60vw 40vw;
+    grid-template-areas: 'logo nav';
+  }
 }
 
 .header {
@@ -31,6 +29,9 @@ header {
     grid-area: logo;
     a {
       padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
     }
   }
   &__icon {
@@ -55,6 +56,10 @@ header {
       display: none;
       @media screen and (min-width: 768px) {
         display: flex;
+        align-items: center;
+        width: fit-content;
+        justify-self: end;
+        margin-right: 10vw;
       }
     }
     &--open {
@@ -69,6 +74,6 @@ header {
     }
   }
 }
-.burger-menu {
+/* .burger-menu {
   grid-area: burger;
-}
+} */
