--- a/src/scss/views/_events.scss
+++ b/src/scss/views/_events.scss
@@ -41,10 +41,6 @@
     }
     p {
       grid-area: content;
-      // position: relative;
-      // top: -40px;
-      // left: 10px;
-      color: white;
       background-color: $secondaryColor;
       width: fit-content;
       height: fit-content;
@@ -124,13 +120,10 @@
     line-break: normal;
   }
   &__error {
-    overflow: hidden;
-    border-right: 0.15em solid hsl(0, 0%, 50%);
+    //border-right: 0.15em solid hsl(0, 0%, 50%);
     padding: 0;
     /*     max-width: fit-content; */
     letter-spacing: 0.15em;
-    animation: typing 3.5s steps(40, end), blink-caret 1.5s step-end infinite;
-    line-break: normal;
   }
   &__error-container {
     display: flex;
