--- a/src/scss/views/_landingPage.scss
+++ b/src/scss/views/_landingPage.scss
@@ -7,6 +7,7 @@ $gradientPercent: 100px;
   h1 {
     font-size: 3.2rem;
     padding: 1em;
+    border-radius: $borderRadius;
   }
   menu {
     display: flex;
