@media work in progress on 769px

--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -1,6 +1,7 @@
 $test-color: white;
 $white: hsl(0, 0%, 90%);
 $lightGrey: hsl(0, 0%, 95%);
+$midLightGrey : hsl(0, 0%, 72%);
 $grey: hsl(0, 0%, 50%);
 $primaryColor: hsl(42, 100%, 46%);
 $primaryColorLight: hsl(42, 100%, 75%);
