--- a/src/scss/components/_eventCard.scss
+++ b/src/scss/components/_eventCard.scss
@@ -1,39 +1,153 @@
 @use '../utilities/boxes' as *;
+@use '../utilities/colors' as *;
 .event-card {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas:
+    'img img img'
+    'titles titles titles'
+    'main-info main-info main-info'
+    'musicians musicians musicians'
+    'prices prices link';
+
+  width: 85vw;
   margin: $boxMargin;
-  gap: 5vw;
   padding: $boxPadding;
   border: $border;
   border-radius: $borderRadius;
-  &__main {
-    width: 33%;
+
+  @media screen and (min-width: 481px) {
+    grid-template-areas:
+      'img titles titles'
+      'img musicians musicians'
+      'main-info prices prices'
+      'main-info link link';
+    width: 80vw;
+  }
+
+  /* div {
+    outline: 1px solid crimson;
+    border-radius: 0;
+  } */
+  &__img {
+    grid-area: img;
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    margin-bottom: 4vh;
+    display: none;
+    @media screen and (min-width: 769px) {
+      display: block;
+    }
+  }
+
+  &__titles {
+    grid-area: titles;
+    font-size: 1.5em;
+    font-weight: 600;
+    margin-bottom: 1vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    img {
-      width: 66%;
-      aspect-ratio: 1/1;
-      margin-bottom: 4vh;
-    }
-    h3,
-    p {
-      text-align: center;
-      margin: 0.25em 0;
+    gap: 1vh;
+    background-color: $midLightGrey;
+    padding: 1vh 0;
+    @media screen and (min-width: 769px) {
+      background: none;
     }
   }
-  &__content {
-    p,
-    a,
-    div {
-      margin: 1vh 0;
+
+  &__title {
+    font-weight: 700;
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+    margin: 0.5em 0;
+    @media screen and (min-width: 769px) {
+      background: none;
+      color: $grey;
     }
-    div {
+  }
+
+  &__subtitle {
+    /* font-weight: 200; */
+    text-align: center;
+    color: white;
+    padding: 0 1em;
+    @media screen and (min-width: 769px) {
+      background: none;
+      color: $grey;
+    }
+  }
+
+  &__main-info {
+    grid-area: main-info;
+    margin-bottom: 1vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    gap: 1vh;
+    @media screen and (min-width: 481px) {
+      justify-content: center;
+      gap: 3vw;
+    }
+    @media screen and (min-width: 769px) {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 3vw;
     }
-    .tag {
-      font-style: italic;
+  }
+
+  &__musicians {
+    grid-area: musicians;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1vh;
+    @media screen and (min-width: 481px) {
+      padding: 0 5vw;
+      ul {
+        display: flex;
+        flex-direction: row;
+      }
     }
+    @media screen and (min-width: 769px) {
+      flex-direction: column;
+      justify-content: center;
+      justify-self: center;
+    }
+  }
+
+  &__prices {
+    grid-area: prices;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1vh;
+    margin-bottom: 1vh;
+
+    @media screen and (min-width: 481px) {
+      text-align: start;
+      width: fit-content;
+      padding-left: 5vw;
+    }
+    @media screen and (min-width: 769px) {
+      text-align: start;
+      background-color: red;
+      width: fit-content;
+      justify-self: center;
+      text-align: center;
+      padding: 0;
+    }
+  }
+
+  &__link {
+    grid-area: link;
+    text-align: end;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    margin-bottom: 1vh;
   }
 }
