--- a/src/scss/components/_eventCard.scss
+++ b/src/scss/components/_eventCard.scss
@@ -24,6 +24,25 @@
       'main-info link link';
     width: 80vw;
   }
+  @media screen and (min-width: 769px) {
+    grid-template-columns: repeat(6, 1fr);
+
+    grid-template-areas:
+      'img img titles titles titles titles'
+      'img img musicians musicians musicians musicians'
+      'main-info main-info  . . . . '
+      'main-info main-info . prices prices link';
+    width: 80vw;
+  }
+
+  @media screen and (min-width: 1024px) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      'img titles titles'
+      'img main-info main-info'
+      'img musicians musicians'
+      'img prices link';
+  }
 
   /* div {
     outline: 1px solid crimson;
@@ -54,6 +73,11 @@
     padding: 1vh 0;
     @media screen and (min-width: 769px) {
       background: none;
+    }
+    @media screen and (min-width: 1024px) {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
     }
   }
 
@@ -98,6 +122,12 @@
       align-items: center;
       gap: 3vw;
     }
+    @media screen and (min-width: 1024px) {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &__musicians {
@@ -113,9 +143,21 @@
       }
     }
     @media screen and (min-width: 769px) {
-      flex-direction: column;
-      justify-content: center;
       justify-self: center;
+      ul {
+        flex-direction: column;
+        justify-content: center;
+        li {
+          display: flex;
+          gap: 1vw;
+        }
+      }
+    }
+    @media screen and (min-width: 1024px) {
+      display: flex;
+      flex-direction: row;
+      align-items: start;
+      gap: 2.5vw;
     }
   }
 
@@ -134,8 +176,10 @@
     }
     @media screen and (min-width: 769px) {
       text-align: start;
-      background-color: red;
+      /* position: relative;
+      left: 10vw; */
       width: fit-content;
+      width: 100%;
       justify-self: center;
       text-align: center;
       padding: 0;
