--- a/src/scss/components/_eventCard.scss
+++ b/src/scss/components/_eventCard.scss
@@ -2,162 +2,76 @@
 @use '../utilities/colors' as *;
 .event-card {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-areas:
-    'img img img'
-    'titles titles titles'
-    'main-info main-info main-info'
-    'musicians musicians musicians'
-    'prices prices link';
+    'img img'
+    'title title'
+    'subtitle subtitle'
+    'musicians musicians'
+    'venue dates'
+    'prices link ';
 
   width: 85vw;
   margin: $boxMargin;
   padding: $boxPadding;
   border: $border;
   border-radius: $borderRadius;
+  gap: 2vh;
 
-  @media screen and (min-width: 481px) {
-    grid-template-areas:
-      'img titles titles'
-      'img musicians musicians'
-      'main-info prices prices'
-      'main-info link link';
-    width: 80vw;
-  }
-  @media screen and (min-width: 769px) {
-    grid-template-columns: repeat(6, 1fr);
-
-    grid-template-areas:
-      'img img titles titles titles titles'
-      'img img musicians musicians musicians musicians'
-      'main-info main-info  . . . . '
-      'main-info main-info . prices prices link';
-    width: 80vw;
-  }
-
-  @media screen and (min-width: 1024px) {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas:
-      'img titles titles'
-      'img main-info main-info'
-      'img musicians musicians'
-      'img prices link';
-  }
-
-  /* div {
-    outline: 1px solid crimson;
-    border-radius: 0;
-  } */
   &__img {
     grid-area: img;
     width: 100%;
-    aspect-ratio: 1/1;
+    aspect-ratio: 2/1;
     object-fit: cover;
-    margin-bottom: 4vh;
-    display: none;
-    @media screen and (min-width: 769px) {
-      display: block;
-    }
-  }
-
-  &__titles {
-    grid-area: titles;
-    font-size: 1.5em;
-    font-weight: 600;
-    margin-bottom: 1vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1vh;
-    background-color: $midLightGrey;
-    padding: 1vh 0;
-    @media screen and (min-width: 769px) {
-      background: none;
-    }
-    @media screen and (min-width: 1024px) {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-    }
   }
 
   &__title {
+    grid-area: title;
     font-weight: 700;
-    color: white;
     font-size: 2rem;
     text-align: center;
-    margin: 0.5em 0;
-    @media screen and (min-width: 769px) {
-      background: none;
-      color: $grey;
-    }
+    align-items: start;
+    margin-top: 0.5em;
+    letter-spacing: 0.1em;
+    //background-color: tomato;
   }
 
   &__subtitle {
-    /* font-weight: 200; */
+    grid-area: subtitle;
     text-align: center;
-    color: white;
-    padding: 0 1em;
-    @media screen and (min-width: 769px) {
-      background: none;
-      color: $grey;
-    }
-  }
-
-  &__main-info {
-    grid-area: main-info;
-    margin-bottom: 1vh;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    gap: 1vh;
-    @media screen and (min-width: 481px) {
-      justify-content: center;
-      gap: 3vw;
-    }
-    @media screen and (min-width: 769px) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 3vw;
-    }
-    @media screen and (min-width: 1024px) {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-    }
+    font-style: italic;
+    //background-color: crimson;
   }
 
   &__musicians {
     grid-area: musicians;
     display: flex;
     flex-direction: column;
-    margin-bottom: 1vh;
-    @media screen and (min-width: 481px) {
-      padding: 0 5vw;
-      ul {
-        display: flex;
-        flex-direction: row;
-      }
+    li {
+      font-weight: 200;
+      margin-left: 5vw;
     }
-    @media screen and (min-width: 769px) {
-      justify-self: center;
-      ul {
-        flex-direction: column;
-        justify-content: center;
-        li {
-          display: flex;
-          gap: 1vw;
-        }
-      }
-    }
-    @media screen and (min-width: 1024px) {
-      display: flex;
-      flex-direction: row;
-      align-items: start;
-      gap: 2.5vw;
+    //background-color: rebeccapurple;
+  }
+
+  &__venue {
+    grid-area: venue;
+    //background-color: violet;
+    text-align: right;
+    font-weight: 700;
+    color: $midLightGrey;
+    padding: 0;
+    padding-right: 0.5em;
+  }
+
+  &__dates {
+    grid-area: dates;
+    //background-color: wheat;
+    text-align: left;
+    padding-left: 0.5em;
+    p {
+      font-weight: 700;
+      color: $midLightGrey;
     }
   }
 
@@ -166,32 +80,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     gap: 1vh;
-    margin-bottom: 1vh;
-
-    @media screen and (min-width: 481px) {
-      text-align: start;
-      width: fit-content;
-      padding-left: 5vw;
+    p {
+      font-weight: 400;
+      color: $midLightGrey;
     }
-    @media screen and (min-width: 769px) {
-      text-align: start;
-      /* position: relative;
-      left: 10vw; */
-      width: fit-content;
-      width: 100%;
-      justify-self: center;
-      text-align: center;
-      padding: 0;
-    }
+    //background-color: saddlebrown;
   }
 
   &__link {
     grid-area: link;
-    text-align: end;
+    background-color: tomato;
     display: flex;
-    flex-direction: column;
-    gap: 1vh;
-    margin-bottom: 1vh;
+    justify-content: right;
+    padding: 0;
+    align-items: end;
+    /* background-color: teal; */
   }
 }
