--- a/src/scss/components/_eventCard.scss
+++ b/src/scss/components/_eventCard.scss
@@ -18,11 +18,44 @@
   border-radius: $borderRadius;
   gap: 2vh;
 
+  @media screen and (min-width: 769px) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      'img title title'
+      'img subtitle subtitle'
+      'img venue dates'
+      'prices musicians musicians'
+      'link musicians musicians';
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 20vw;
+    grid-template-columns: repeat(2, 1fr);
+    /* background-color: teal; */
+    grid-template-areas:
+      'img img'
+      'title title'
+      'subtitle subtitle'
+      'venue dates'
+      'prices musicians'
+      'link musicians';
+  }
+
   &__img {
     grid-area: img;
     width: 100%;
     aspect-ratio: 2/1;
     object-fit: cover;
+    @media screen and (min-width: 479px) {
+      aspect-ratio: 3/1;
+    }
+    @media screen and (min-width: 769px) {
+      aspect-ratio: 1/1;
+    }
+    @media screen and (min-width: 1024px) {
+      width: 20vw;
+      aspect-ratio: 2/1;
+    }
   }
 
   &__title {
@@ -33,14 +66,14 @@
     align-items: start;
     margin-top: 0.5em;
     letter-spacing: 0.1em;
-    //background-color: tomato;
+    /* background-color: tomato; */
   }
 
   &__subtitle {
     grid-area: subtitle;
     text-align: center;
     font-style: italic;
-    //background-color: crimson;
+    /* background-color: crimson; */
   }
 
   &__musicians {
@@ -50,13 +83,23 @@
     li {
       font-weight: 200;
       margin-left: 5vw;
+      @media screen and (min-width: 769px) {
+        padding-left: 10vw;
+      }
+    }
+    @media screen and (min-width: 1024px) {
+      /* background-color: maroon; */
+      li {
+        margin: 0;
+        padding: 0;
+      }
     }
     //background-color: rebeccapurple;
   }
 
   &__venue {
     grid-area: venue;
-    //background-color: violet;
+/*     background-color: violet;*/    
     text-align: right;
     font-weight: 700;
     color: $midLightGrey;
@@ -66,7 +109,7 @@
 
   &__dates {
     grid-area: dates;
-    //background-color: wheat;
+/*     background-color: wheat;*/
     text-align: left;
     padding-left: 0.5em;
     p {
@@ -86,16 +129,20 @@
       font-weight: 400;
       color: $midLightGrey;
     }
-    //background-color: saddlebrown;
+    /* background-color: saddlebrown; */
   }
 
   &__link {
     grid-area: link;
-    background-color: tomato;
+    /* background-color: tomato; */
     display: flex;
     justify-content: right;
     padding: 0;
     align-items: end;
     /* background-color: teal; */
+    @media screen and (min-width: 1024px) {
+      justify-content: start;
+      
+    }
   }
 }
