--- a/src/scss/views/_events.scss
+++ b/src/scss/views/_events.scss
@@ -4,6 +4,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media screen and (min-width: 1024px) {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: start;
+    flex-wrap: wrap;
+  }
 }
 
 .event {
