--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -7,11 +7,12 @@ footer {
   justify-content: space-between;
   align-items: start;
   padding: $bigBoxPadding;
-  position: sticky;
-  bottom: -20vh;
-  border-top: 1px solid $primaryColor;
+  background-color: $white;
+  /*   border-top: 1px solid $primaryColor; */
+  min-height: 5vh;
   @media screen and (min-width: 481px) {
     padding: 0 5vw;
+    padding: $bigBoxPaddingBigScreen;
   }
 
   menu {
@@ -24,6 +25,10 @@ footer {
       margin: 0;
       padding: 0;
     }
+    @media screen and (min-width: 769px) {
+      flex-direction: row;
+      gap: 1.5vw;
+    }
   }
   .footer__contact {
     display: flex;
@@ -34,6 +39,10 @@ footer {
       padding: 0;
       margin: 0;
       color: $primaryColor;
+    }
+    @media screen and (min-width: 769px) {
+      flex-direction: row;
+      gap: 1.5vw;
     }
   }
 }
