--- a/src/scss/utilities/_boxes.scss
+++ b/src/scss/utilities/_boxes.scss
@@ -3,4 +3,5 @@ $borderRadius: 5px;
 $boxMargin: 1.5em;
 $boxPadding: 0.5em 1em;
 $bigBoxPadding: 3vh 1em;
+$bigBoxPaddingBigScreen: 3vh 5em;
 $border: 1px solid $primaryColor;
