--- a/src/scss/views/_contact.scss
+++ b/src/scss/views/_contact.scss
@@ -23,6 +23,9 @@ textarea {
   @media screen and (min-width: 769px) {
     width: 50vw;
   }
+  @media screen and (min-width: 1025px) {
+    width: 33vw;
+  }
 }
 textarea {
   height: 160px;
