--- a/src/scss/views/_landingPage.scss
+++ b/src/scss/views/_landingPage.scss
@@ -5,9 +5,13 @@ $gradientPercent: 100px;
 
 .landing-page {
   h1 {
-    font-size: 3.2rem;
-    padding: 1em;
+    font-size: 4.5rem;
+    padding: 0;
+    margin: 1em 0;
     border-radius: $borderRadius;
+    @media screen and (min-width: 481px) {
+      padding : 1em;
+    }
   }
   menu {
     display: flex;
@@ -34,8 +38,9 @@ $gradientPercent: 100px;
     }
   }
   &__hero {
-    background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bXVzaWN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
-    background-size: cover;
+    /* background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bXVzaWN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
+    background-size: cover; */
+    margin: 0;
   }
   &__container1 {
     @include list;
