--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -42,6 +42,7 @@ header {
   }
   &__title {
     font-family: $logoFont;
+    font-size : 1.5rem;
     padding: 0;
     margin: 0 1vw;
   }
@@ -64,11 +65,14 @@ header {
       }
     }
     &--open {
+      position: absolute;
+      inset: 10vh 0 auto 0;
       display: flex;
-      padding: 0;
+      padding: 0 5vw;
       margin: 1vh 0;
       grid-area: nav;
       background-color: $primaryColor;
+      justify-content: space-between;
       a {
         color: $white;
       }
@@ -78,6 +82,3 @@ header {
     }
   }
 }
-/* .burger-menu {
-  grid-area: burger;
-} */
