--- a/src/scss/views/_views.scss
+++ b/src/scss/views/_views.scss
@@ -1,8 +1,9 @@
-@forward "./_about.scss";
-@forward "./_contact.scss";
-@forward "./_events.scss";
-@forward "./_impressum.scss";
-@forward "./_landingPage.scss";
-@forward "./projects.scss";
-@forward "./collaborate.scss";
-@forward "./not-found.scss";
+@forward './_about.scss';
+@forward './_contact.scss';
+@forward './_events.scss';
+@forward './_impressum.scss';
+@forward './_landingPage.scss';
+@forward './projects.scss';
+@forward './collaborate.scss';
+@forward './not-found.scss';
+@forward './faq.scss';
