--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -1,4 +1,5 @@
 @use '../utilities/_boxes.scss' as *;
+@use "../utilities/typography" as *;
 
 @mixin list {
   list-style: none;
@@ -7,4 +8,5 @@
 
 li {
   @include list;
+  @include baseTypography;
 }
