--- a/src/scss/utilities/_boxes.scss
+++ b/src/scss/utilities/_boxes.scss
@@ -1,7 +1,7 @@
 @use 'colors.scss' as *;
 $borderRadius: 5px;
 $boxMargin: 1.5em;
-$boxPadding: 0.5em 1em;
+$boxPadding: 0;
 $bigBoxPadding: 3vh 1em;
 $bigBoxPaddingBigScreen: 3vh 5em;
 $border: 1px solid $primaryColor;
