--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -6,9 +6,14 @@ $lightGrey: hsl(0, 0%, 95%);
 $midLightGrey : hsl(0, 0%, 72%);
 $grey: hsl(0, 0%, 50%);
 $primaryColor: hsl(42, 100%, 46%);
+$primaryColorMuted: hsl(42, 50%, 46%);
 $primaryColorLight: hsl(42, 100%, 75%);
+$primaryColorDark: hsl(42, 100%, 25%);
 $primaryColorTransparent: hsla(42, 100%, 66%, 0.5);
 $secondaryColor: #ba17eb;
+$secondaryColorDark: hsl(286, 84%, 25%);
+$secondaryColorMutedDark: hsl(286, 25%, 25%);
+$secondaryColorMuted: hsl(286, 25%, 50%);
 $secondaryColorLight: hsl(286, 84%, 75%);
 $tertiaryColor: #17eb98;
 /* $primaryColorLight: hsl(0, 0%, 100%); */
