--- a/src/scss/views/_about.scss
+++ b/src/scss/views/_about.scss
@@ -19,6 +19,8 @@
   section ul {
     display: flex;
     flex-direction: column;
+    width: fit-content;
+    margin: 0 auto;
     gap: 3.7vh;
   }
   section li {
