--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,9 +1,12 @@
 @use '../utilities/colors' as *;
 @use '../utilities/boxes' as *;
+@use '../utilities/typography' as *;
+
 button {
+  @include baseTypography;
   background-color: $white;
   border: none;
-  padding: $boxPadding;
+  padding: .5em 1.5em;
   margin-top: 2.5vh;
   border-radius: $borderRadius;
 }
